fix overflow to hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
+  overflow: hidden !important;
   -ms-overflow-style: none;
   scrollbar-width: none; 
 }
